[gd_scene load_steps=12 format=2]

[ext_resource path="res://environment/trigger/pillar/textures/pillar.png" type="Texture" id=1]
[ext_resource path="res://environment/hazards/base/Hazard.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/hazards/base/Trap.gd" type="Script" id=3]
[ext_resource path="res://utility/audio_player/RandomAudioPlayer.gd" type="Script" id=4]
[ext_resource path="res://environment/hazards/sounds/blade2hand_imp_metal_002.wav" type="AudioStream" id=5]
[ext_resource path="res://environment/hazards/sounds/blade2hand_imp_metal_001.wav" type="AudioStream" id=6]
[ext_resource path="res://environment/hazards/sounds/blade2hand_imp_metal_003.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.79221, 33.1902 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.7214, 32.5225 )

[sub_resource type="Animation" id=4]
resource_name = "trigger"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0, 3, 4, 3, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody2D/CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 2 ), SubResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StaticBody2D/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0.397, -50 ), Vector2( 0.396851, -32.5417 ) ]
}

[node name="PillarTrap" instance=ExtResource( 2 )]
script = ExtResource( 3 )
interval = 3.0

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( -0.0432968, -30.7119 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="." index="1"]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
autoplay = "trigger"
anims/trigger = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="3"]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
disabled = true
position = Vector2( 0.396851, -32.5417 )
shape = SubResource( 3 )

[node name="ImpactSound" type="AudioStreamPlayer2D" parent="." index="4"]
max_distance = 1000.0
attenuation = 5.0
bus = "Sound"
script = ExtResource( 4 )
sounds = [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ]

[connection signal="frame_changed" from="Sprite" to="." method="_on_Pillar_Sprite_frame_changed"]
