[gd_scene load_steps=8 format=2]

[ext_resource path="res://environment/hazards/textures/spike_small.png" type="Texture" id=1]
[ext_resource path="res://environment/hazards/base/Hazard.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/hazards/base/Trap.gd" type="Script" id=3]
[ext_resource path="res://utility/audio_player/AudioPlayer.gd" type="Script" id=4]
[ext_resource path="res://environment/hazards/sounds/blade1hand_imp_dirt_002.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="Animation" id=2]
resource_name = "trigger"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("SpikeSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.9 )
}

[node name="SpikeTrapSmall" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="." index="1"]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 28
frame = 27

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/trigger = SubResource( 2 )

[node name="SpikeSound" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 5 )
max_distance = 1000.0
attenuation = 5.0
bus = "Sound"
script = ExtResource( 4 )

[connection signal="frame_changed" from="Sprite" to="." method="_on_Spike_Sprite_frame_changed"]
